# garazyk

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitleaksignore  .gitmodules  .impeccable.md  ADMINUI_DEPLOYMENT_GUIDE.md  ADMINUI_PROJECT_COMPLETE.md  ADMINUI_QUICKSTART.md  ADMINUI_START_HERE.md  AGENTS.md  AGENTS_QUICKREF.md  ATProtoPDS  BUILD.md  Brewfile  CLAUDE.md  CMakeLists.txt  CONCURRENCY_FIX_PLAN.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  DID_PLC_IMPLEMENTATION_PLAN.md  DOCUMENTATION.md  Dockerfile  Dockerfile.gnustep  Doxyfile  IMPLEMENTATION_PLAN.md  MIGRATING.md  Makefile  PDS_DEVELOPMENT_SUMMARY.md  PDS_IMPLEMENTATION_ROADMAP.md  README.md  SECURITY_ANALYSIS_REPORT.md  SECURITY_PLAN.md  SECURITY_TESTING_PLAN.md  SERVICES_SETUP_SUMMARY.md  SESSION_SUMMARY.md  (+100 more)
examples/tests/: CMakeLists.txt
examples/tests/tests/: AccountServiceTests.m  RecordServiceTests.m  TutorialBase64URLTests.m  TutorialBlobStoreTests.m  TutorialCIDGeneratorTests.m  TutorialECDSAUtilsTests.m  TutorialIdentityServiceTests.m  TutorialJWTTests.m  TutorialModerationServiceTests.m  TutorialSQLiteHelperTests.m  main.m
examples/tutorial-1-hello-pds/: CMakeLists.txt  README.md
examples/tutorial-1-hello-pds/src/: main.m
examples/tutorial-2-accounts/: CMakeLists.txt  README.md
examples/tutorial-2-accounts/src/: Account.h  Account.m  AccountRepository.h  AccountRepository.m  AccountService.h  AccountService.m  SimpleJWTMinter.h  SimpleJWTMinter.m  main.m
examples/tutorial-4-auth/: CMakeLists.txt  README.md  tutorial-4-auth
examples/tutorial-4-auth/src/: DPoPHandler.h  DPoPHandler.m  JWTVerifier.h  JWTVerifier.m  OAuth2Handler.h  OAuth2Handler.m  TutorialDPoPHandler.h  TutorialDPoPHandler.m  TutorialOAuth2Handler.h  TutorialOAuth2Handler.m  main.m
examples/tutorial-5-firehose/: CMakeLists.txt  README.md
examples/tutorial-5-firehose/src/: EventFormatter.h  EventFormatter.m  SubscribeReposHandler.h  SubscribeReposHandler.m  WebSocketConnection.h  WebSocketConnection.m  main.m
examples/tutorial-8-identity/: CMakeLists.txt
examples/tutorial-8-identity/src/: TutorialIdentityService.h  TutorialIdentityService.m  main.m
objc-jupyter-wasm/: CMakeLists.txt  MANIFEST.in  README.md  flake.nix  install.json  jupyterlite_config.py  package-lock.json  package.json  pyproject.toml  result  run_manual.mjs  test-jl.mjs  tsconfig.json
objc-jupyter-wasm/compiler/: libobjc2.wasm
objc-jupyter-wasm/demo/: 00-orientation.ipynb  01-hello-objc.ipynb  02-foundation-collections.ipynb  03-control-flow-blocks.ipynb  04-protocols-exceptions.ipynb  05-design-patterns.ipynb  06-atproto-identifiers.ipynb  07-cid-content-addressing.ipynb  08-dag-cbor.ipynb  09-car-archives.ipynb  10-mst-insertion.ipynb  11-mst-proofs-diff.ipynb  12-xrpc-dispatch.ipynb  13-account-service.ipynb  14-record-writes.ipynb  15-blob-storage.ipynb  16-firehose-sync.ipynb  17-migrations.ipynb  18-archaeology-repository.ipynb  19-archaeology-firehose.ipynb  20-archaeology-repo-sync.ipynb  algorithms.ipynb  atproto-accounts.ipynb  atproto-aturi.ipynb  atproto-blobs.ipynb  atproto-firehose.ipynb  atproto-identity.ipynb  atproto-kernel-tests.ipynb  atproto-migrations.ipynb  atproto-records.ipynb  atproto-repo-sync.ipynb  atproto-visualizers.ipynb  atproto-xrpc.ipynb  example-content-updater.ipynb  example-link-parser.ipynb  example-migration-mapping.ipynb  foundation.ipynb  hello.ipynb  interactive.ipynb  objc-patterns.ipynb  (+9 more)
objc-jupyter-wasm/docs/: PRD.md  capability-matrix.md  garazyk-tutorial-snippet-policy.md  plan-autoreleasepool.md  runtime-gap-report.md  scratchpad-networking-phase-a.md  scratchpad-networking-phase-b.md
objc-jupyter-wasm/docs/issues/: 01-static-storage-qualifier.md  02-multi-token-types.md  03-block-stop-parameter.md
objc-jupyter-wasm/docs/plans/: master-runtime-plan.md  runtime-feature-review.md  scratchpad-runtime-phase-d.md  scratchpad-runtime-phase-e.md  (+2 more)
objc-jupyter-wasm/js/: compile-service.ts  objc-kernel.ts  objc-worker.js  runtime-support.ts  wasi-harness.js  wasm-loader.js
objc-jupyter-wasm/jupyterlite/: index.html  kernel.js  kernelspec.json
objc-jupyter-wasm/kernel/: PARSER_STATUS.md  kernel.wasm  objc_interp_ast.c  objc_interp_ast.h  objc_interp_class.c  objc_interp_class.h  objc_interp_context.h  objc_interp_dispatch.c  objc_interp_dispatch.h  objc_interp_format.c  objc_interp_format.h  objc_interp_globals.h  objc_interp_lexer.c  objc_interp_lexer.h  objc_interp_messages.c  objc_interp_messages.h  objc_interp_parser.c  objc_interp_parser.h  objc_interp_primary.c  objc_interp_primary.h  objc_interp_state.c  objc_interp_state.h  objc_interp_types.h  objc_interpreter.c  objc_interpreter.h  objc_kernel.h  objc_kernel.m  objc_runtime_bridge.c  patch_debug.c  patch_lexer.c  test_native.c
objc-jupyter-wasm/nix/: kernel-wasm.nix  libobjc2-real-subset.nix  libobjc2-wasm-full.nix  libobjc2-wasm.nix  wasi-libc-sysroot.nix  wasi-sysroot.nix
objc-jupyter-wasm/objc_jupyter_wasm/: __init__.py
objc-jupyter-wasm/runtime/: libobjc2_smoke.c
objc-jupyter-wasm/scripts/: build-jupyterlite-site.sh  build-smoke-site.mjs  copy-static-assets.mjs  generate-capability-matrix.mjs  run-capability-baseline.sh  serve-demo.sh
objc-jupyter-wasm/src/: atproto-upload.ts  cid-mime-extension.ts  cid-viewer.ts  index.ts
objc-jupyter-wasm/style/: atproto-viewers.css
objc-jupyter-wasm/tests/: browser-smoke-page.mjs  browser-smoke.html  browser-smoke.mjs  debug-conforms.mjs  debug-exact-probe.mjs  debug-for-loop.mjs  debug-inline-methods.mjs  debug-iskindofclass.mjs  debug-iskindofclass2.mjs  debug-nsmutablestring.mjs  debug-probe-sequence.mjs  debug-super-dispatch.mjs  garazyk-compat-corpus.mjs  kernel-smoke.mjs  objc-kernel-test-harness.mjs  run-notebooks.mjs  test-garazyk-compat.mjs  test-interface-bug.mjs  test-json-bridge.mjs  test-network.mjs  test-protocol-exception.cjs  test-protocol-exception.mjs  test-runtime-gap-probes.mjs  test-runtime-v2.mjs  test_category.mjs  test_debug.mjs  test_ptr_field.mjs  test_ptr_field_debug.mjs
scripts/mcp-pty-rs/: Cargo.toml  README.md
(+7532 files in other folders)
